--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,33 +12,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
-
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/collapsing_toolbar_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:contentScrim="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|enterAlways">
-
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
+                app:layout_scrollFlags="scroll|enterAlways"
                 app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
             <com.mcochin.stockstreakz.custom.LogoTextView
                 android:text="@string/app_name"
                 android:layout_width="wrap_content"
-                android:layout_marginTop="?attr/actionBarSize"
                 android:layout_height="?attr/listPreferredItemHeight"
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/logo_font_size"
                 android:gravity="center_vertical"
                 android:layout_gravity="center_horizontal"
+                app:layout_scrollFlags="scroll|enterAlways"
                 app:fontName="@string/logo_font_name"/>
-
-        </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
     <fragment
