--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#18d886</color>
     <color name="colorPrimaryDark">#12a868</color>
     <color name="colorAccent">#7c4dff</color>
+
+    <color name="secondary_text">#727272</color>
+
+    <!--stock up or down colors-->
+    <color name="stock_up">#0ec24d</color>
+    <color name="stock_down">#ff0000</color>
 </resources>
