--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,5 +8,10 @@
     <dimen name="logo_font_size">36dp</dimen>
 
     <!-- stock arrow size-->
-    <dimen name="stock_arrow_size_normal">25dp</dimen>
+    <dimen name="stock_arrow_size_normal">24dp</dimen>
+    <dimen name="stock_arrow_size_first">30dp</dimen>
+
+    <!-- first item type date margin-->
+    <dimen name="date_margin">16dp</dimen>
+
 </resources>
