--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,4 +11,32 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <!-- list_item_first TextView style -->
+    <style name="ListItemFirstTextLarge">
+        <item name="android:textSize">30sp</item>
+    </style>
+
+    <!--detail_main_section TextView styles-->
+    <style name="DetailMainColumns.DetailMainLeftColumn">
+        <item name="android:gravity">end</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:paddingRight">10dp</item>
+        <item name="android:paddingLeft">0dp</item>
+        <item name="android:paddingEnd">10dp</item>
+        <item name="android:paddingStart">0dp</item>
+    </style>
+
+    <style name="DetailMainColumns.DetailMainRightColumn">
+        <item name="android:gravity">start</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:paddingRight">0dp</item>
+        <item name="android:paddingStart">10dp</item>
+        <item name="android:paddingEnd">0dp</item>
+    </style>
+
+    <style name="DetailMainColumns">
+        <item name="android:textSize">20sp</item>
+        <item name="android:layout_marginTop">5dp</item>
+        <item name="android:layout_marginBottom">5dp</item>
+    </style>
 </resources>
