--- a/app/src/main/res/layout/list_item_test.xml
+++ b/app/src/main/res/layout/list_item_test.xml
@@ -32,7 +32,7 @@
         tools:text="33d"/>
 
     <ImageView
-        android:id="@+id/image_arrow"
+        android:id="@+id/image_streak_arrow"
         android:layout_width="@dimen/stock_arrow_size_normal"
         android:layout_height="@dimen/stock_arrow_size_normal"
         android:contentDescription="@string/content_description_stock_arrow"
