--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -19,23 +19,14 @@
             android:layout_height="?actionBarSize"
             app:layout_scrollFlags="scroll|enterAlways"
             app:popupTheme="@style/AppTheme.PopupOverlay"/>
-
-        <com.mcochin.stockstreakz.custom.LogoTextView
-            android:text="@string/app_name"
-            android:layout_width="wrap_content"
-            android:layout_height="?attr/listPreferredItemHeight"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/logo_font_size"
-            android:gravity="center_vertical"
-            android:layout_gravity="center_horizontal"
-            app:layout_scrollFlags="scroll|enterAlways"
-            app:fontName="@string/logo_font_name"/>
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+    <include
+        layout="@layout/recycler_view"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="360dp"
+        android:layout_height="wrap_content"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 </android.support.design.widget.CoordinatorLayout>
+
