--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment
+
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main_fragment"
-    android:name="com.mcochin.stockstreakz.fragments.MainFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:layout="@layout/fragment_main" />
+    tools:context=".MainActivity">
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:popupTheme="@style/AppTheme.PopupOverlay"/>
+
+        <com.mcochin.stockstreakz.custom.LogoTextView
+            android:text="@string/app_name"
+            android:layout_width="wrap_content"
+            android:layout_height="?attr/listPreferredItemHeight"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/logo_font_size"
+            android:gravity="center_vertical"
+            android:layout_gravity="center_horizontal"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:fontName="@string/logo_font_name"/>
+    </android.support.design.widget.AppBarLayout>
+
+    <include layout="@layout/recycler_view"/>
+
+</android.support.design.widget.CoordinatorLayout>
+
