--- a/app/src/main/res/layout/detail_extras_section.xml
+++ b/app/src/main/res/layout/detail_extras_section.xml
@@ -21,7 +21,7 @@
         app:layout_rowWeight="1" />
 
     <TextView
-        style="@style/DetailColumnsCommon.DetailExtrasLeft"
+        style="@style/DetailColumnsCommon.LeftCommon.DetailExtrasLeft"
         android:layout_width="0dp"
         android:text="@string/last_streak_price"
         app:layout_columnWeight="1"/>
@@ -30,14 +30,14 @@
         style="@style/DetailColumnsCommon.DetailRight"
         android:id="@+id/text_last_streak_price"
         android:layout_width="0dp"
-        android:textColor="@color/detail_extras_text"
+        android:textColor="@color/white"
         android:gravity="bottom"
         app:layout_gravity="fill_vertical"
         app:layout_columnWeight="1"
         tools:text="$543.34"/>
 
     <TextView
-        style="@style/DetailColumnsCommon.DetailExtrasLeft"
+        style="@style/DetailColumnsCommon.LeftCommon.DetailExtrasLeft"
         android:layout_width="0dp"
         android:text="@string/last_streak"
         app:layout_columnWeight="1"/>
@@ -55,7 +55,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:textColor="@color/detail_extras_text"
+            android:textColor="@color/white"
             tools:text="33 days"/>
 
         <ImageView
@@ -67,7 +67,7 @@
     </LinearLayout>
 
     <TextView
-        style="@style/DetailColumnsCommon.DetailExtrasLeft"
+        style="@style/DetailColumnsCommon.LeftCommon.DetailExtrasLeft"
         android:layout_width="0dp"
         android:text="@string/streak_year_high"
         app:layout_columnWeight="1" />
@@ -87,7 +87,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:textColor="@color/detail_extras_text"
+            android:textColor="@color/white"
             tools:text="33 days"/>
 
         <ImageView
@@ -99,7 +99,7 @@
     </LinearLayout>
 
     <TextView
-        style="@style/DetailColumnsCommon.DetailExtrasLeft"
+        style="@style/DetailColumnsCommon.LeftCommon.DetailExtrasLeft"
         android:layout_width="0dp"
         android:text="@string/streak_year_low"
         app:layout_columnWeight="1" />
@@ -119,7 +119,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:textColor="@color/detail_extras_text"
+            android:textColor="@color/white"
             tools:text="33 days"/>
 
         <ImageView
