--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -20,8 +20,7 @@
 
             <include layout="@layout/detail_main_section"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"/>
+                android:layout_height="wrap_content" />
 
             <include layout="@layout/detail_extras_section"
                 android:layout_width="match_parent"
