--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,10 @@
             app:fontName="@string/logo_font_name"/>
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/recycler_view"/>
+    <include layout="@layout/activity_main_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
 </android.support.design.widget.CoordinatorLayout>
 
