--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,21 +1,28 @@
 <resources>
-    <!-- logo -->
+    <!-- Logo -->
     <dimen name="logo_font_size">36dp</dimen>
 
-    <!-- stock arrow size-->
+    <!-- Stock arrow size-->
     <dimen name="stock_arrow_size_normal">24dp</dimen>
     <dimen name="stock_arrow_size_first">30dp</dimen>
 
-    <!-- first item type date margin-->
+    <!-- First item type date margin-->
     <dimen name="date_margin">16dp</dimen>
 
-    <!-- detail fragment-->
-    <dimen name="detail_right_column_mid_padding">15dp</dimen>
-    <dimen name="detail_left_column_mid_padding">15dp</dimen>
+    <!-- Detail fragment-->
+    <dimen name="detail_right_column_inner_padding">15dp</dimen>
+    <dimen name="detail_left_column_inner_padding">15dp</dimen>
+    <dimen name="detail_common_column_outer_padding">0dp</dimen>
 
-    <!-- on devices < sw360dp scrollview generates this whitespace for
+    <!-- On devices < sw360dp scrollview generates this whitespace for
     some reason and we need to fill it out vertically-->
     <dimen name="detail_extras_section_vertical_padding">10dp</dimen>
     <dimen name="detail_extras_section_horizontal_padding">20dp</dimen>
 
+    <!-- Values for the cardView detail view in tablets-->
+    <dimen name="appbar_elevation">4dp</dimen>
+    <dimen name="details_app_bar_overlap">24dp</dimen>
+    <dimen name="detail_card_elevation">6dp</dimen>
+
+    <dimen name="card_view_margin">@dimen/abc_list_item_padding_horizontal_material</dimen>
 </resources>
