--- a/app/src/main/res/layout-sw360dp/fragment_detail_land.xml
+++ b/app/src/main/res/layout-sw360dp/fragment_detail_land.xml
@@ -8,16 +8,16 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toLeftOf="@id/center_space"
-        android:layout_toStartOf="@id/center_space"
+        android:layout_toLeftOf="@+id/center_space"
+        android:layout_toStartOf="@+id/center_space"
         android:background="@android:color/transparent"/>
 
     <include layout="@layout/detail_main_section"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/toolbar"
-        android:layout_toLeftOf="@id/center_space"
-        android:layout_toStartOf="@id/center_space"/>
+        android:layout_below="@+id/toolbar"
+        android:layout_toLeftOf="@+id/center_space"
+        android:layout_toStartOf="@+id/center_space"/>
 
     <Space
         android:id="@+id/center_space"
@@ -26,8 +26,8 @@
         android:layout_centerInParent="true"/>
 
     <include layout="@layout/detail_extras_section"
-        android:layout_toRightOf="@id/center_space"
-        android:layout_toEndOf="@id/center_space"
+        android:layout_toRightOf="@+id/center_space"
+        android:layout_toEndOf="@+id/center_space"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </RelativeLayout>
