--- a/app/src/main/res/layout-sw600dp-land/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/rootView"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -18,8 +19,8 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/listPreferredItemHeight"
         android:layout_below="@id/toolbar"
-        android:layout_toLeftOf="@id/center_space"
-        android:layout_toStartOf="@id/center_space"
+        android:layout_toLeftOf="@+id/center_space"
+        android:layout_toStartOf="@+id/center_space"
         android:gravity="center"
         android:background="@color/colorPrimary"
         android:textColor="@android:color/white"
@@ -36,16 +37,16 @@
     <include layout="@layout/activity_main_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_toLeftOf="@id/center_space"
-        android:layout_toStartOf="@id/center_space"
+        android:layout_toLeftOf="@+id/center_space"
+        android:layout_toStartOf="@+id/center_space"
         android:layout_below="@id/logo"/>
 
     <include layout="@layout/activity_main_card_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_toRightOf="@id/center_space"
-        android:layout_toEndOf="@id/center_space"
-        android:layout_below="@id/toolbar"
+        android:layout_toRightOf="@+id/center_space"
+        android:layout_toEndOf="@+id/center_space"
+        android:layout_below="@+id/toolbar"
         android:layout_marginRight="@dimen/card_view_margin"
         android:layout_marginEnd="@dimen/card_view_margin"
         android:layout_marginBottom="@dimen/card_view_margin"/>
