--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rootView"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -18,7 +19,7 @@
         android:id="@+id/logo"
         android:layout_width="match_parent"
         android:layout_height="?attr/listPreferredItemHeight"
-        android:layout_below="@id/toolbar"
+        android:layout_below="@+id/toolbar"
         android:gravity="center"
         android:background="@color/colorPrimary"
         android:textColor="@android:color/white"
@@ -35,13 +36,13 @@
         android:background="@color/colorPrimary"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@id/logo" />
+        android:layout_below="@+id/logo" />
 
     <include
         layout="@layout/activity_main_card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/logo"
+        android:layout_below="@+id/logo"
         android:layout_marginLeft="@dimen/abc_list_item_padding_horizontal_material"
         android:layout_marginRight="@dimen/abc_list_item_padding_horizontal_material"
         tools:layout_height="360dp"/>
@@ -55,12 +56,12 @@
         android:background="@color/colorPrimary"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_below="@id/logo" />
+        android:layout_below="@+id/logo" />
 
     <include layout="@layout/activity_main_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/detail_container"
+        android:layout_below="@+id/detail_container"
         android:layout_marginLeft="@dimen/card_view_margin"
         android:layout_marginRight="@dimen/card_view_margin"/>
 </RelativeLayout>
