--- a/app/src/main/res/layout/detail_extras_section.xml
+++ b/app/src/main/res/layout/detail_extras_section.xml
@@ -28,7 +28,7 @@
 
     <TextView
         style="@style/DetailColumnsCommon.DetailRight"
-        android:id="@+id/text_last_streak_price"
+        android:id="@+id/text_streak_end_price_prev"
         android:layout_width="0dp"
         android:textColor="@color/white"
         android:gravity="bottom"
@@ -51,7 +51,7 @@
         app:layout_columnWeight="1">
 
         <TextView
-            android:id="@+id/text_streak_last"
+            android:id="@+id/text_streak_prev"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
