--- a/app/src/main/res/layout/detail_main_section.xml
+++ b/app/src/main/res/layout/detail_main_section.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="5dp"
+    android:paddingBottom="10dp"
     android:paddingLeft="@dimen/detail_extras_section_horizontal_padding"
     android:paddingStart="@dimen/detail_extras_section_horizontal_padding"
     android:paddingRight="@dimen/detail_extras_section_horizontal_padding"
@@ -24,7 +24,7 @@
         android:layout_marginBottom="@dimen/date_margin"
         android:fontFamily="sans-serif"
         android:gravity="center_horizontal"
-        android:textSize="16sp"
+        android:textSize="@dimen/supplementary_text_size"
         android:textColor="@color/secondary_text"
         app:layout_columnSpan="2"
         app:layout_columnWeight="1"
@@ -36,6 +36,7 @@
         android:textColor="@color/secondary_text"
         android:singleLine="true"
         android:ellipsize="end"
+        android:textSize="@dimen/supplementary_text_size"
         app:layout_columnSpan="2"
         app:layout_columnWeight="1"
         tools:text="GoPro, Inc."/>
@@ -43,7 +44,7 @@
     <TextView android:id="@+id/text_symbol"
         android:layout_width="0dp"
         android:gravity="center_horizontal"
-        android:textSize="32sp"
+        android:textSize="@dimen/symbol_text_size"
         android:textColor="@android:color/black"
         app:layout_columnSpan="2"
         app:layout_columnWeight="1"
@@ -77,7 +78,7 @@
         android:layout_width="0dp"
         android:textColor="@android:color/black"
         app:layout_columnWeight="1"
-        tools:textColor="@color/stock_down"
+        tools:textColor="@color/stock_down_red"
         tools:text="$-333.33"/>
 
     <TextView
@@ -92,7 +93,7 @@
         android:layout_width="0dp"
         android:textColor="@android:color/black"
         app:layout_columnWeight="1"
-        tools:textColor="@color/stock_down"
+        tools:textColor="@color/stock_down_red"
         tools:text="-333.33%" />
 
     <TextView
