--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,65 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.GridLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="10dp"
-    android:background="@drawable/list_item_selector"
-    android:clickable="true"
-    app:columnCount="4">
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/text_symbol"
-        android:layout_width="0dp"
+    <android.support.v7.widget.GridLayout
+        android:id="@+id/swipe_container"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:textAppearanceLarge"
-        app:layout_columnWeight="5"
-        tools:text="GPRO"/>
+        android:background="@drawable/list_item_selector"
+        android:padding="10dp"
+        app:columnCount="4">
 
-    <TextView
-        android:id="@+id/text_prev_close"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:textAppearanceLarge"
-        app:layout_columnWeight="1"
-        tools:text="$263.26"/>
+        <TextView
+            android:id="@+id/text_symbol"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:textAppearanceLarge"
+            app:layout_columnWeight="5"
+            tools:text="GPRO"/>
 
-    <TextView
-        android:id="@+id/text_streak"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:textAppearanceLarge"
-        tools:text="33d"/>
+        <TextView
+            android:id="@+id/text_prev_close"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:textAppearanceLarge"
+            app:layout_columnWeight="1"
+            tools:text="$263.26"/>
 
-    <ImageView
-        android:id="@+id/image_streak_arrow"
-        android:layout_width="@dimen/stock_arrow_size_normal"
-        android:layout_height="@dimen/stock_arrow_size_normal"
-        android:contentDescription="@string/content_description_stock_arrow"
-        app:layout_gravity="center_vertical"
-        tools:src="@drawable/ic_stock_down"/>
+        <TextView
+            android:id="@+id/text_streak"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:textAppearanceLarge"
+            tools:text="33d"/>
 
-    <TextView
-        android:id="@+id/text_full_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="@color/secondary_text"
-        android:singleLine="true"
-        android:ellipsize="end"
-        app:layout_columnWeight="5"
-        tools:text="GoPro, Inc."/>
+        <ImageView
+            android:id="@+id/image_streak_arrow"
+            android:layout_width="@dimen/stock_arrow_size_normal"
+            android:layout_height="@dimen/stock_arrow_size_normal"
+            android:contentDescription="@string/content_description_stock_arrow"
+            app:layout_gravity="center_vertical"
+            tools:src="@drawable/ic_stock_down"/>
 
-    <TextView
-        android:id="@+id/text_change_amt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        app:layout_columnWeight="1"
-        app:layout_columnSpan="3"
-        tools:text="$-220.00 (-393.44%)"
-        tools:textColor="@color/stock_down"/>
+        <TextView
+            android:id="@+id/text_full_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textColor="@color/secondary_text"
+            android:singleLine="true"
+            android:ellipsize="end"
+            app:layout_columnWeight="5"
+            tools:text="GoPro, Inc."/>
 
-</android.support.v7.widget.GridLayout>
+        <TextView
+            android:id="@+id/text_change_amt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            app:layout_columnWeight="1"
+            app:layout_columnSpan="3"
+            tools:text="$-220.00 (-393.44%)"
+            tools:textColor="@color/stock_down_red"/>
+
+    </android.support.v7.widget.GridLayout>
+
+</FrameLayout>
