--- a/app/src/main/res/layout/list_item_first.xml
+++ b/app/src/main/res/layout/list_item_first.xml
@@ -1,88 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.GridLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:columnCount="2">
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/text_date_updated"
-        android:layout_width="0dp"
-        android:layout_marginBottom="@dimen/date_margin"
-        android:layout_marginTop="@dimen/date_margin"
-        android:fontFamily="sans-serif"
-        android:gravity="center_horizontal"
-        android:textSize="16sp"
-        android:textColor="@color/secondary_text"
-        app:layout_columnSpan="2"
-        app:layout_columnWeight="1"
-        tools:text="Updated: Thursday, April 03 \n @ 4:00pm" />
-
-    <TextView
-        android:id="@+id/text_full_name"
-        android:layout_width="0dp"
-        android:gravity="center_horizontal"
-        android:textColor="@color/secondary_text"
-        android:singleLine="true"
-        android:ellipsize="end"
-        app:layout_columnSpan="2"
-        app:layout_columnWeight="1"
-        tools:text="GoPro, Inc."/>
-
-    <TextView
-        android:id="@+id/text_symbol"
-        android:layout_width="0dp"
-        android:gravity="center_horizontal"
-        android:textAppearance="@style/ListItemFirstTextLarge"
-        app:layout_columnWeight="1"
-        tools:text="GPRO"/>
-
-    <TextView
-        android:id="@+id/text_dollar_change"
-        android:layout_width="0dp"
-        android:gravity="center_horizontal"
-        android:textAppearance="@style/ListItemFirstTextLarge"
-        app:layout_columnWeight="1"
-        tools:textColor="@color/stock_down"
-        tools:text="$-282.91"/>
-
-    <TextView
-        android:id="@+id/text_prev_close"
-        android:layout_width="0dp"
-        android:gravity="center_horizontal"
-        android:textAppearance="@style/ListItemFirstTextLarge"
-        app:layout_columnWeight="1"
-        tools:text="$220.23"/>
-
-    <TextView
-        android:id="@+id/text_percent_change"
-        android:layout_width="0dp"
-        android:gravity="center_horizontal"
-        android:textAppearance="@style/ListItemFirstTextLarge"
-        app:layout_columnWeight="1"
-        tools:textColor="@color/stock_down"
-        tools:text="-120.23%"/>
-
-    <LinearLayout
-        android:layout_width="0dp"
-        android:gravity="center"
-        app:layout_columnSpan="2"
-        app:layout_columnWeight="1">
+    <android.support.v7.widget.GridLayout
+        android:id="@+id/swipe_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        app:columnCount="2">
 
         <TextView
-            android:id="@+id/text_streak"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="@style/ListItemFirstTextLarge"
-            tools:text="33 days"/>
+            android:id="@+id/text_date_updated"
+            android:layout_width="0dp"
+            android:layout_marginBottom="@dimen/date_margin"
+            android:layout_marginTop="@dimen/date_margin"
+            android:fontFamily="sans-serif"
+            android:gravity="center_horizontal"
+            android:textSize="16sp"
+            android:textColor="@color/secondary_text"
+            app:layout_columnSpan="2"
+            app:layout_columnWeight="1"
+            tools:text="Updated: Thursday, April 03 \n @ 4:00pm" />
 
-        <ImageView
-            android:id="@+id/image_streak_arrow"
-            android:layout_width="@dimen/stock_arrow_size_first"
-            android:layout_height="@dimen/stock_arrow_size_first"
-            android:src="@drawable/ic_stock_down"
-            android:contentDescription="@string/content_description_stock_arrow"/>
-    </LinearLayout>
-</android.support.v7.widget.GridLayout>
+        <TextView
+            android:id="@+id/text_full_name"
+            android:layout_width="0dp"
+            android:gravity="center_horizontal"
+            android:textColor="@color/secondary_text"
+            android:singleLine="true"
+            android:ellipsize="end"
+            app:layout_columnSpan="2"
+            app:layout_columnWeight="1"
+            tools:text="GoPro, Inc."/>
+
+        <TextView
+            android:id="@+id/text_symbol"
+            android:layout_width="0dp"
+            android:gravity="center_horizontal"
+            android:textAppearance="@style/ListItemFirstTextLarge"
+            app:layout_columnWeight="1"
+            tools:text="GPRO"/>
+
+        <TextView
+            android:id="@+id/text_dollar_change"
+            android:layout_width="0dp"
+            android:gravity="center_horizontal"
+            android:textAppearance="@style/ListItemFirstTextLarge"
+            app:layout_columnWeight="1"
+            tools:textColor="@color/stock_down_red"
+            tools:text="$-282.91"/>
+
+        <TextView
+            android:id="@+id/text_prev_close"
+            android:layout_width="0dp"
+            android:gravity="center_horizontal"
+            android:textAppearance="@style/ListItemFirstTextLarge"
+            app:layout_columnWeight="1"
+            tools:text="$220.23"/>
+
+        <TextView
+            android:id="@+id/text_percent_change"
+            android:layout_width="0dp"
+            android:gravity="center_horizontal"
+            android:textAppearance="@style/ListItemFirstTextLarge"
+            app:layout_columnWeight="1"
+            tools:textColor="@color/stock_down_red"
+            tools:text="-120.23%"/>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:gravity="center"
+            app:layout_columnSpan="2"
+            app:layout_columnWeight="1">
+
+            <TextView
+                android:id="@+id/text_streak"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/ListItemFirstTextLarge"
+                tools:text="33 days"/>
+
+            <ImageView
+                android:id="@+id/image_streak_arrow"
+                android:layout_width="@dimen/stock_arrow_size_first"
+                android:layout_height="@dimen/stock_arrow_size_first"
+                android:src="@drawable/ic_stock_down"
+                android:contentDescription="@string/content_description_stock_arrow"/>
+        </LinearLayout>
+    </android.support.v7.widget.GridLayout>
+
+</FrameLayout>
