--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,14 +2,14 @@
 <resources>
     <color name="colorPrimary">#18d886</color>
     <color name="colorPrimaryDark">#12a868</color>
-    <color name="colorAccent">#7c4dff</color>
+    <color name="colorAccent">#eeff41</color>
 
     <color name="secondary_text">#727272</color>
     <color name="white">#ffff</color>
 
     <!--stock up or down colors-->
-    <color name="stock_up">#0ec24d</color>
-    <color name="stock_down">#ff0000</color>
+    <color name="stock_up_green">#0ec24d</color>
+    <color name="stock_down_red">#ff0000</color>
 
     <!--Detail Fragment extra colors -->
     <color name="detail_extras_background">#2e4134</color>
@@ -17,4 +17,5 @@
 
     <!-- the activated state color of list_item-->
     <color name="activated">#E0E0E0</color>
+    <color name="bg_item_dragging_active">#99ffb1</color>
 </resources>
